# MarocTour

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  NADOR_VALIDATION.md  README.md  docker-compose.dev.yml  docker-compose.yml  manual_deploy.sh  seed_score.py
.github/workflows/: app-tests.yml  build-and-push.yml  cd-build-push.yml  cd-deploy.yml  ci-cd.yml  ci-tests.yml  deploy-k8s.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: cities.py  quiz.py
apps/api/app/core/: config.py  middleware.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: city.py  quiz.py
apps/api/app/schemas/: city.py  quiz.py
apps/api/scripts/: clean_scores.py  debug_city.py  fix_dates.py  seed.py  setup_db.py
apps/api/tests/: conftest.py  test_cities.py  test_fes.py
apps/web/: CARTE-CONFIG.md  Dockerfile  Dockerfile.dev  debug-carte.md  i18n.ts  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  setup-map.sh  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/components/: providers.tsx
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GANTT.md  QUICK_TEST_GUIDE.md  TESTING_FES.md  TEST_SUMMARY_FES.md
docs/cities/: nador.md
infra/observability/: loki-config.yml  prometheus.yml
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  postgres-deployment.yaml  secret.yaml
(+56 files in other folders)
